--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
   </head>
 
   <body>
-    <info-mgr-app>Loading...</info-mgr-app>
+    <info-mgr-app>
+      <div class="center-page">
+        <div id="loading-title">
+          <h1>Loading...</h1>
+        </div>
+        <div id="loading-spinner">
+          <i class="fa fa-circle-o-notch fa-spin fa-5x fa-fw"></i>
+        </div>
+      </div>
+    </info-mgr-app>
   </body>
 </html>
